--- a/view_css/mods.css
+++ b/view_css/mods.css
@@ -32,26 +32,56 @@ span {
     ;
 }
 
-.solid-bar {
+hr {
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: -50px;
+    margin-right: 0px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #FFFFFF;
+    width: 150%;
+}
+
+.icon-banner {
     background-color:#FFFFFF;
-    padding:30px;
+    padding: 0px;
+    margin-top: -20px;
+    height: 50px;
 }
 
 .semi-transparent-bar {
     background-color:#FFBE4D;
     opacity:0.42;
-    padding:25px;
+    color: #000000;
+    padding: 0px;
+    margin-top: -35px;
+    margin-left: -100px;
+    margin-right: -100px;
+    margin-bottom: 0px;
+    height: 192px; 
 }
 
 .tv  {
-    width: 250px;
-    height:230px;
+    width: 230px;
+    height:210px;
     transform:translate(0%, 4%);
     word-break: normal;
 }
 
 h2 {
     font-weight: bolder;
+}
+
+.checkmark-action {
+    width: 100px;
+    height: 100px;
+}
+
+.bottom-of-page-action {
+    color:#FFBE4D; 
+    font-size:16pt;
 }
 </style>
 </head>
