--- a/view_css/mods.css
+++ b/view_css/mods.css
@@ -4,7 +4,7 @@
             padding-right: 18px;
 }
 body {
-    background-image: url(../images/viewality-bg.png);
+    background-image: url(../images/viewality-bg.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
