--- a/view_css/mods.css
+++ b/view_css/mods.css
@@ -4,7 +4,7 @@
             padding-right: 18px;
 }
 body {
-    background-image: url(../images/viewality-bg.jpg);
+    background-image: url(../images/viewality-bg.png);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -46,8 +46,8 @@ hr {
     color: #000000;
     padding: 0px;
     margin-top: -35px;
-    margin-left: -100px;
-    margin-right: -100px;
+    margin-left: -15px;
+    margin-right: -15px;
     margin-bottom: 0px;
     height: 205px;
     
