--- a/view_css/mods.css
+++ b/view_css/mods.css
@@ -4,7 +4,7 @@
             padding-right: 18px;
 }
 body {
-    background-image: url(../images/viewality-bg.png);
+    background-image: url(../images/camera-coffee-computer-705164.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -38,7 +38,6 @@ hr {
     padding: 0px;
     margin-bottom: -10px;
     margin-top: -10px;
-    height: 155px;
     }
 .semi-transparent-bar {
     background-color:#FFBE4D;
@@ -65,8 +64,11 @@ h2 {
     grid-column-gap: 1px;
     grid-template-columns: auto auto auto auto auto;
     position: relative;
-    top: 13px;
+    top: 15px;
     justify-content: space-evenly;
+    vertical-align: middle;
+    height: auto;
+    width: 100%;
 }
 .bottom-of-page-action {
     color:#FFBE4D; 
