--- a/view_css/mods.css
+++ b/view_css/mods.css
@@ -52,9 +52,10 @@
 }
 
 #banner-fx {
+    /* for a nice & smooth fade-in animation */
     animation-name: fade-in;
-    animation-duration: 2s;
-    animation-timing-function: ease-in;
+    animation-duration: 4s;
+    animation-timing-function: cubic-bezier(0.25, 0.25, 0.75, 0.75);
     font-size: 13vw;
     font-weight: bold;
     text-justify: inter-word;
@@ -67,12 +68,17 @@
     0% {
         color: white;
         opacity: 0;
-        font-size: 11vw;
+        font-size: 9vw;
+    }
+    25% {
+        color: white;
+        opacity: 0;
+        font-size: 10vw;
     }
     50% {
         color: white;
-        opacity: 0.10;
-        font-size: 12vw;
+        opacity: 0.20;
+        font-size: 11vw;
     }
     100% {
         color: white;
